--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>The Code Magazine</h1>
+    <a href="#blog">Blog</a>
+    <a href="#challenges">Challenges</a>
+    <a href="#flexbox">Flexbox</a>
+    <a href="#css">Css Grid</a>
+
+    <h1></h1>
     <p></p>
   </body>
 </html>
