h2,image and paragraph added

--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
     <a href="#flexbox">Flexbox</a>
     <a href="#css">Css Grid</a>
 
-    <h1></h1>
-    <p></p>
+    <h2>The Basic Languages Of The Web:HTML</h2>
+    <img
+      src="./img/laura-jones.jpg"
+      alt="img"
+      width="50"
+      height="50"
+      srcset=""
+    />
+    <p>posted by <b>Laura Jones</b> on Monday,June 21st 2027</p>
   </body>
 </html>
