i have added imagin and link

--- a/index.html
+++ b/index.html
@@ -22,5 +22,82 @@
       srcset=""
     />
     <p>posted by <b>Laura Jones</b> on Monday,June 21st 2027</p>
+    <!-- adding bana imagin -->
+    <img src="./img/post-img.jpg" alt="" height="250" width="50%" srcset="" />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos porro
+      aspernatur, itaque voluptatibus totam tempora placeat ullam. Vitae velit
+      eligendi fugiat officia saepe necessitatibus autem, magnam, nihil unde
+      iusto corrupti.
+    </p>
+    <h3>What Is HTML?</h3>
+    <p>
+      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod commodi
+      voluptatibus, ducimus nam, rerum rem praesentium deserunt minus nostrum at
+      accusantium corrupti nulla vel aspernatur ut modi odit eligendi aperiam,
+      illum ratione fugiat dolor obcaecati esse! Eaque esse quasi saepe aut
+      ipsam enim. Cumque iste quas, repudiandae sunt placeat fuga!
+    </p>
+    <!--ol-->
+    <ol>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+      <li>Lorem ipsum dolor sit amet.</li>
+    </ol>
+    <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam
+      voluptas, <a href="">non, quisqua </a>
+    </p>
+    <h3>Why Should You Learn HTML?</h3>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique,
+      debitis.
+    </p>
+    <!--ul-->
+    <ul>
+      <li>Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+      <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+      <li>Lorem ipsum dolor sit amet consectetur adipisicing.</li>
+      <li>Lorem ipsum, dolor sit amet consectetur adipisicing.</li>
+    </ul>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat, a?</p>
+    <h4><b>Related post</b></h4>
+    <ul>
+      <li>
+        <img
+          src="./img/related-1.jpg"
+          alt=""
+          width="50"
+          height="50"
+          srcset=""
+        />
+        <a href="#"> How to learn web development</a>
+        <p>by jonasn</p>
+      </li>
+      <li>
+        <img
+          src="./img/related-2.jpg"
+          alt=""
+          width="50"
+          height="50"
+          srcset=""
+        />
+        <a href="#">the unkwon power of css"</a>
+        <p>by jim dillon</p>
+      </li>
+      <li>
+        <img
+          src="./img/related-3.jpg"
+          alt=""
+          width="50"
+          height="50"
+          srcset=""
+        />
+        <a href="#">why javaScript is awesome</a>
+        <p>by matilda</p>
+      </li>
+    </ul>
+    <p>copyright&copy;2027 by the code magazine</p>
   </body>
 </html>
