i have added location

--- a/contact.html
+++ b/contact.html
@@ -6,5 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <form>
+      <label>firstname</label>
+      <br />
+      <input type="text" /><br />
+      <label>secondname</label>
+      <br />
+      <input type="text" /><br />
+      <label>telephone</label>
+      <br />
+      <textarea name="textarea" id="" cols="30" rows="30"></textarea>
+      <br />
+      <button type="submit">submit here</button>
+    </form>
+    <a href="index.html">back to main page</a>
+  </body>
 </html>
