--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   </head>
   <body>
     <h1>The Code Magazine</h1>
-    <a href="#blog">Blog</a>
+    <a href="https://www.google.com/" target="__blank">google</a>
     <a href="#challenges">Challenges</a>
     <a href="#flexbox">Flexbox</a>
-    <a href="#css">Css Grid</a>
+    <a href="#css">Css Grid</a><br />
+    <a href="contact.html"> back to contact</a>
+    <a href="location.html">location</a>
 
     <h2>The Basic Languages Of The Web:HTML</h2>
     <img
@@ -22,7 +24,7 @@
       srcset=""
     />
     <p>posted by <b>Laura Jones</b> on Monday,June 21st 2027</p>
-    <!-- adding bana imagin -->
+    <!-- adding banar imagin -->
     <img src="./img/post-img.jpg" alt="" height="250" width="50%" srcset="" />
     <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos porro
